add text to graph 'per 1 follower' in product detail page (issue #320)

--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -925,7 +925,8 @@ li:nth-child(5) .circle-text {
 	z-index:3;
 }
 .circle-mask2-text{
-  padding-top:1.5em;
+    padding-top:0.8em;
+    line-height: 1.5em;
 }
 
 .cash{
