--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -142,6 +142,7 @@
                                 </li>
                                 <div class="circle-mask2">
                                     <div class="circle-mask2-text">
+                                        <span style="font-size:13px; color:#888;">팔로워 1명당</span><br>
                                         <span style="font-size:2em;">{{ product.unit_price }}</span>
                                         <span style="font-size:1em;">원</span>
                                     </div>
