--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,12 @@
 <footer>
     <div class="container">
         <div class="left">
-            <p>회사명 : 소셜업&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;대표 : 이수지</p>
+            <p>상호명 : 소셜업&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;대표 : 이수지</p>
             <p>사업자등록번호 : 483-15-00403&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고 : 2016-서울서초-1612호 </p>
-            <p>주소 : 서울특별시 서초구 나루터로15길 30-2 103호</p>
+            <p>사업장 소재지 : 서울특별시 강남구 역삼동 770-10 한성빌딩</p>
         </div>
         <div class="right">
-            <p>고객센터 : 031-954-2640&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일 : social_up@naver.com</p>
+            <p>Tel : 010-9505-2682&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일 : social_up@naver.com</p>
         </div>
     </div>
 </footer>
