add warning explain in product upload

--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -323,6 +323,7 @@
                 <div class="product-upload-sub">
                     1회 포스팅
                     {{ form.price }}
+                    (숫자로만 적어주세요.)
                 </div>
                 <div class="product-upload-sub manuscript">
                     <div class="manuscript_available">
@@ -350,6 +351,7 @@
                 </div>
                 <div class="product-upload-sub">
                     {{ form.working_period }} 일
+                    (숫자로만 입력해주세요)
                 </div>
             </div>
 
