Add product text in card in category

--- a/templates/category.html
+++ b/templates/category.html
@@ -288,6 +288,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:24px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
