only input number in product upload

--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -316,7 +316,7 @@
                 </div>
             </div>
 
-            <div class="product-upload-info">
+            <div class="product-upload-info only_number">
                 <div class="product-upload-title">
                      <label class="product-upload-title-label">* 가격</label>
                 </div>
@@ -345,7 +345,7 @@
                 </div>
             </div>
 
-            <div class="product-upload-info">
+            <div class="product-upload-info only_number">
                 <div class="product-upload-title">
                      <label class="product-upload-title-label">작업기간</label>
                 </div>
